tests/ui/fail/js_concat.stderr
error: Potentially invalid expansion. Expected `::`, `break`, `if`, `return`, a `(`, a `[` or 3 others.
 --> tests/ui/fail/js_concat.rs:5:16
  |
5 |         $left ++ $right
  |                ^
